# allegro-API

./: .gitignore  LICENSE.MD  README.md  pyproject.toml
.github/workflows/: pytest.yaml  release.yml
src/allegro/: __init__.py  allegro.py  exceptions.py
src/allegroAPI/: __init__.py  allegroAPI.py
src/smartlight/: __init__.py  exceptions.py  smartlight.py
tests/: test_api.py
